# backrooms-bntg-bevy

./: .gitignore  Cargo.toml  rustfmt.toml
assets/: game.blend  game.glb  level_0.blend  level_0.glb
assets/tiled/: tiled.tiled-session  tiled.tsx
crates/backrooms-bntg/: Cargo.toml
crates/backrooms-bntg/assets/: almond_water.blend  almond_water.glb  game.glb
crates/backrooms-bntg/assets/models/: almond_water.blend  almond_water.glb
crates/backrooms-bntg/assets/shaders/: fullscreen_effect.wgsl
crates/backrooms-bntg/assets/tiled/: tiled.json  tiled.tmx  tiled.tsx
crates/backrooms-bntg/src/: game.rs  level_0.rs  main.rs  networking.rs  pause.rs  player.rs  player_menu.rs  screen_effect.rs  steam.rs  ui.rs  waiting_players.rs
crates/wfc/: Cargo.toml
crates/wfc/benches/: generate.rs
crates/wfc/examples/: teste.rs
crates/wfc/src/: lib.rs  map.rs  pathfinding.rs  probability.rs
crates/wfc/tests/: tiled_macro.json  tiled_macro.rs
crates/wfc_derive/: Cargo.toml
crates/wfc_derive/src/: lib.rs  tiled.rs
docs/: README.md
src/: create_lobby.rs  game.rs  main.rs  main_menu.rs  networking.rs  player.rs  search_lobby.rs  steam.rs  ui.rs  waiting_players.rs
