[package]
name = "wfc"
version = "0.1.0"
edition = "2024"

[dependencies]
wfc_derive = { path = "../wfc_derive" }
rand = "0.10.2"
bevy_math = "0.19.0"
serde = { version = "1.0.228", features = ["derive"], optional = true }
pathfinding = { version = "4.15.0", optional = true }

[dev-dependencies]
bevy = "0.19.0"
criterion = { version = "0.8.2" }

[features]
serde = ["dep:serde"]
pathfinding = ["dep:pathfinding"]
default = ["serde", "pathfinding"]

[[bench]]
name = "generate"
harness = false
